DRAFT-000:FIX: Fix header z-index after reviewing the previous commit

--- a/src/scss/components/header/_header.scss
+++ b/src/scss/components/header/_header.scss
@@ -16,7 +16,6 @@ $padding-sticky-header: 20px;
     background: color('white');
     transition: $motion-ease-in-out;
     transition-property: top;
-    z-index: 4;
     z-index: 50;
 
 
